[project]
name = "linuxdo-mcp"
version = "0.2.0"
description = "MCP server for searching and reading linux.do (Discourse)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "curl_cffi>=0.7",
]

[project.scripts]
linuxdo-mcp = "linuxdo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linuxdo_mcp"]
